# Ai-Coach-V2

./: .env.example  .gitignore  README.md  check_date.py  check_groups.py  debug_rag.py  inspect_activity.py  inspect_intervals.py  inspect_intervals_detail.py  inspect_power_curve.py  inspect_routes.py  inspect_streams.py  inspect_wellness.py  pyproject.toml  requirements.txt  test_gpx.py  test_rag.py
src/ai_coach/: analysis.py  bot.py  charts.py  charts_interactive.py  coach.py  config.py  gpx.py  intervals.py  journal.py  main.py  memory.py  plan_tracker.py  profile.py  rag.py  token_tracker.py  weather.py  wellness.py
